--- a/upload-ui/package.json
+++ b/upload-ui/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host=0.0.0.0 --port 4201 --proxy-config proxy.conf.json",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
