--- a/upload-ui/tsconfig.json
+++ b/upload-ui/tsconfig.json
@@ -13,7 +13,6 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2020",
@@ -21,7 +20,10 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    /* Experimental Options */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
