--- a/upload-ui/nginx/nginx.conf
+++ b/upload-ui/nginx/nginx.conf
@@ -17,4 +17,14 @@ server {
   location / {
     try_files $uri $uri/ /index.html =404;
   }
+
+  location /api {
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $http_host;
+		proxy_set_header X-NginX-Proxy true;
+		rewrite ^/api/?(.*) /api/$1 break;
+		proxy_pass http://localhost:8080/;
+		proxy_redirect off;
+	}
 }
